--- a/css/_works.scss
+++ b/css/_works.scss
@@ -7,7 +7,7 @@
     }
 
     .carousel-block{
-        max-width: 55%;
+        max-width: 50%;
         margin: 2rem auto;
         padding: 0 7.5rem;
     }
@@ -101,6 +101,7 @@
         .title{
             position: static;
             bottom: 0;
+            margin-bottom: 4rem;
             h5{
                 a{
                     color: white;
