--- a/css/index.css
+++ b/css/index.css
@@ -1418,7 +1418,7 @@ nav {
 #works #carouselWorks .carousel-item img {
   -webkit-border-radius: 5px 0 0 5px;
           border-radius: 5px 0 0 5px;
-  max-height: 501px;
+  max-height: 500px;
   max-width: auto;
 }
 
@@ -1468,13 +1468,17 @@ nav {
 }
 
 #works #carouselWorks .paysage {
-  min-height: 500px;
+  height: 500px;
 }
 
 #works #carouselWorks .paysage img {
   -webkit-border-radius: 5px 5px 0 0;
           border-radius: 5px 5px 0 0;
   max-width: 100% !important;
+}
+
+#works #carouselWorks .paysage .description {
+  padding-bottom: 5rem;
 }
 
 #works #carouselWorks .title {
@@ -1575,6 +1579,9 @@ nav {
   .carousel-block {
     max-width: 75% !important;
   }
+  .paysage .description {
+    padding-top: 3rem !important;
+  }
 }
 
 @media screen and (max-width: 992px) {
@@ -1617,7 +1624,10 @@ nav {
     margin: 0 auto !important;
   }
   .paysage {
-    min-height: 300px !important;
+    min-height: 500px !important;
+  }
+  .lucine {
+    padding-top: 3rem !important;
   }
 }
 
@@ -1660,16 +1670,16 @@ nav {
   20% {
   }
   40% {
-    height: 19px;
+    height: 1px;
   }
   60% {
-    height: 40px;
+    height: 37px;
   }
   80% {
-    height: 32px;
+    height: 45px;
   }
   100% {
-    height: 29px;
+    height: 47px;
   }
 }
 
@@ -1677,16 +1687,16 @@ nav {
   20% {
   }
   40% {
-    height: 29px;
+    height: 30px;
   }
   60% {
-    height: 42px;
+    height: 29px;
   }
   80% {
-    height: 2px;
+    height: 46px;
   }
   100% {
-    height: 1px;
+    height: 19px;
   }
 }
 
@@ -1694,16 +1704,16 @@ nav {
   20% {
   }
   40% {
-    height: 4px;
+    height: 16px;
   }
   60% {
-    height: 39px;
+    height: 33px;
   }
   80% {
-    height: 23px;
+    height: 45px;
   }
   100% {
-    height: 11px;
+    height: 19px;
   }
 }
 
@@ -1711,16 +1721,16 @@ nav {
   20% {
   }
   40% {
-    height: 36px;
+    height: 32px;
   }
   60% {
-    height: 48px;
+    height: 15px;
   }
   80% {
-    height: 21px;
+    height: 1px;
   }
   100% {
-    height: 19px;
+    height: 23px;
   }
 }
 
@@ -1731,13 +1741,13 @@ nav {
     height: 33px;
   }
   60% {
-    height: 22px;
+    height: 29px;
   }
   80% {
-    height: 9px;
+    height: 11px;
   }
   100% {
-    height: 20px;
+    height: 10px;
   }
 }
 
@@ -1745,16 +1755,16 @@ nav {
   20% {
   }
   40% {
-    height: 13px;
+    height: 36px;
   }
   60% {
-    height: 22px;
+    height: 11px;
   }
   80% {
     height: 6px;
   }
   100% {
-    height: 43px;
+    height: 5px;
   }
 }
 
@@ -1762,16 +1772,16 @@ nav {
   20% {
   }
   40% {
-    height: 12px;
+    height: 25px;
   }
   60% {
-    height: 48px;
+    height: 49px;
   }
   80% {
-    height: 46px;
+    height: 41px;
   }
   100% {
-    height: 7px;
+    height: 26px;
   }
 }
 
@@ -1779,16 +1789,16 @@ nav {
   20% {
   }
   40% {
-    height: 33px;
+    height: 4px;
   }
   60% {
-    height: 32px;
+    height: 43px;
   }
   80% {
-    height: 14px;
+    height: 11px;
   }
   100% {
-    height: 41px;
+    height: 49px;
   }
 }
 
@@ -1796,16 +1806,16 @@ nav {
   20% {
   }
   40% {
-    height: 28px;
+    height: 34px;
   }
   60% {
-    height: 8px;
+    height: 26px;
   }
   80% {
-    height: 43px;
+    height: 27px;
   }
   100% {
-    height: 12px;
+    height: 8px;
   }
 }
 
@@ -1813,16 +1823,16 @@ nav {
   20% {
   }
   40% {
-    height: 32px;
+    height: 29px;
   }
   60% {
-    height: 16px;
+    height: 18px;
   }
   80% {
-    height: 20px;
+    height: 42px;
   }
   100% {
-    height: 18px;
+    height: 26px;
   }
 }
 
@@ -1830,16 +1840,16 @@ nav {
   20% {
   }
   40% {
-    height: 37px;
-  }
-  60% {
     height: 40px;
   }
+  60% {
+    height: 22px;
+  }
   80% {
-    height: 3px;
+    height: 26px;
   }
   100% {
-    height: 47px;
+    height: 19px;
   }
 }
 
@@ -1847,16 +1857,16 @@ nav {
   20% {
   }
   40% {
-    height: 31px;
+    height: 18px;
   }
   60% {
-    height: 43px;
+    height: 21px;
   }
   80% {
-    height: 35px;
+    height: 5px;
   }
   100% {
-    height: 14px;
+    height: 1px;
   }
 }
 
@@ -1864,16 +1874,16 @@ nav {
   20% {
   }
   40% {
-    height: 33px;
+    height: 10px;
   }
   60% {
-    height: 21px;
+    height: 16px;
   }
   80% {
-    height: 21px;
+    height: 1px;
   }
   100% {
-    height: 6px;
+    height: 11px;
   }
 }
 
@@ -1881,16 +1891,16 @@ nav {
   20% {
   }
   40% {
-    height: 40px;
+    height: 13px;
   }
   60% {
-    height: 42px;
+    height: 5px;
   }
   80% {
-    height: 33px;
+    height: 14px;
   }
   100% {
-    height: 34px;
+    height: 29px;
   }
 }
 
@@ -1898,16 +1908,16 @@ nav {
   20% {
   }
   40% {
-    height: 10px;
+    height: 4px;
   }
   60% {
-    height: 48px;
+    height: 36px;
   }
   80% {
-    height: 12px;
+    height: 49px;
   }
   100% {
-    height: 22px;
+    height: 30px;
   }
 }
 
@@ -1915,16 +1925,16 @@ nav {
   20% {
   }
   40% {
-    height: 26px;
+    height: 31px;
   }
   60% {
-    height: 13px;
+    height: 27px;
   }
   80% {
-    height: 41px;
+    height: 7px;
   }
   100% {
-    height: 46px;
+    height: 25px;
   }
 }
 
@@ -1932,16 +1942,16 @@ nav {
   20% {
   }
   40% {
-    height: 40px;
+    height: 11px;
   }
   60% {
-    height: 35px;
+    height: 45px;
   }
   80% {
-    height: 50px;
+    height: 10px;
   }
   100% {
-    height: 32px;
+    height: 28px;
   }
 }
 
@@ -1949,16 +1959,16 @@ nav {
   20% {
   }
   40% {
-    height: 21px;
-  }
-  60% {
     height: 46px;
   }
+  60% {
+    height: 16px;
+  }
   80% {
-    height: 41px;
+    height: 37px;
   }
   100% {
-    height: 19px;
+    height: 3px;
   }
 }
 
@@ -1966,16 +1976,16 @@ nav {
   20% {
   }
   40% {
-    height: 38px;
-  }
-  60% {
     height: 9px;
   }
+  60% {
+    height: 27px;
+  }
   80% {
-    height: 28px;
+    height: 1px;
   }
   100% {
-    height: 17px;
+    height: 16px;
   }
 }
 
@@ -1983,16 +1993,16 @@ nav {
   20% {
   }
   40% {
-    height: 8px;
+    height: 2px;
   }
   60% {
-    height: 11px;
+    height: 39px;
   }
   80% {
-    height: 50px;
+    height: 11px;
   }
   100% {
-    height: 27px;
+    height: 25px;
   }
 }
 
@@ -2032,63 +2042,63 @@ nav {
 }
 
 #equalizer #levels .level.level1:after {
-  height: 47px;
-  -webkit-animation: pump-it-up1 2485ms linear infinite alternate;
-          animation: pump-it-up1 2485ms linear infinite alternate;
+  height: 45px;
+  -webkit-animation: pump-it-up1 3408ms linear infinite alternate;
+          animation: pump-it-up1 3408ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level2:after {
-  height: 1px;
-  -webkit-animation: pump-it-up2 6466ms linear infinite alternate;
-          animation: pump-it-up2 6466ms linear infinite alternate;
+  height: 5px;
+  -webkit-animation: pump-it-up2 2025ms linear infinite alternate;
+          animation: pump-it-up2 2025ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level3:after {
-  height: 5px;
-  -webkit-animation: pump-it-up3 3071ms linear infinite alternate;
-          animation: pump-it-up3 3071ms linear infinite alternate;
+  height: 11px;
+  -webkit-animation: pump-it-up3 6247ms linear infinite alternate;
+          animation: pump-it-up3 6247ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level4:after {
-  height: 13px;
-  -webkit-animation: pump-it-up4 5914ms linear infinite alternate;
-          animation: pump-it-up4 5914ms linear infinite alternate;
+  height: 17px;
+  -webkit-animation: pump-it-up4 3052ms linear infinite alternate;
+          animation: pump-it-up4 3052ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level5:after {
-  height: 26px;
-  -webkit-animation: pump-it-up5 2128ms linear infinite alternate;
-          animation: pump-it-up5 2128ms linear infinite alternate;
+  height: 23px;
+  -webkit-animation: pump-it-up5 3729ms linear infinite alternate;
+          animation: pump-it-up5 3729ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level6:after {
-  height: 21px;
-  -webkit-animation: pump-it-up6 6721ms linear infinite alternate;
-          animation: pump-it-up6 6721ms linear infinite alternate;
+  height: 30px;
+  -webkit-animation: pump-it-up6 6180ms linear infinite alternate;
+          animation: pump-it-up6 6180ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level7:after {
   height: 37px;
-  -webkit-animation: pump-it-up7 4995ms linear infinite alternate;
-          animation: pump-it-up7 4995ms linear infinite alternate;
+  -webkit-animation: pump-it-up7 2409ms linear infinite alternate;
+          animation: pump-it-up7 2409ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level8:after {
-  height: 48px;
-  -webkit-animation: pump-it-up8 5674ms linear infinite alternate;
-          animation: pump-it-up8 5674ms linear infinite alternate;
+  height: 16px;
+  -webkit-animation: pump-it-up8 4812ms linear infinite alternate;
+          animation: pump-it-up8 4812ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level9:after {
-  height: 39px;
-  -webkit-animation: pump-it-up9 2829ms linear infinite alternate;
-          animation: pump-it-up9 2829ms linear infinite alternate;
+  height: 18px;
+  -webkit-animation: pump-it-up9 4026ms linear infinite alternate;
+          animation: pump-it-up9 4026ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level10:after {
-  height: 37px;
-  -webkit-animation: pump-it-up10 2383ms linear infinite alternate;
-          animation: pump-it-up10 2383ms linear infinite alternate;
+  height: 48px;
+  -webkit-animation: pump-it-up10 4315ms linear infinite alternate;
+          animation: pump-it-up10 4315ms linear infinite alternate;
 }
 
 #contact {
